tests/compile_fail/v3_patch_adds_field.iron
patch object Foo {
    var extra: Int
}

object Foo {
    var x: Int
    init(v: Int) {
        self.x = v
    }
}

func main() {
    val f: Foo = Foo(1)
}
